# avx-codegen-fuzzer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  test_clang.json
.cargo/: config
src/: aligned_slice.rs  arm_codegen_ctx.rs  arm_codegen_fuzzing.rs  arm_intrinsics.rs  arm_parse_spec.rs  code_exe_server_conn.rs  codegen_ctx.rs  codegen_fuzzing.rs  compilation_config.rs  exec_mem.rs  inline_asm_codegen_fuzzing.rs  intrinsics.rs  loop_codegen_fuzzing.rs  main.rs  parse_exe.rs  parse_spec.rs  rand.rs  x86_codegen_ctx.rs  x86_codegen_fuzzing.rs  x86_intrinsics.rs  x86_parse_spec.rs
